--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Collector</title>
+    <link rel="icon" type="image/svg+xml" href="/ucl-logo.svg" />
+    <title>UCL</title>
   </head>
   <body class="bg-slate-950 text-slate-100">
     <div id="root"></div>
